--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Leader Board</title>
     <!-- link css -->
     <link rel="stylesheet" href="styles/style.css" />
+    <!-- font awsome cdn -->
+    <script
+      src="https://kit.fontawesome.com/248c967ae4.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <!-- header start -->
@@ -55,6 +60,111 @@
                 <p class="blog-author">By <a href="">Danny Sapio"</a></p>
               </div>
             </article>
+            <article class="blog">
+              <div class="thumbnail">
+                <img src="images/blogs/blog-2.png" alt="" />
+              </div>
+              <div class="blog-info">
+                <h3 class="blog-title">13 of My Favorite UI/UX Goodies</h3>
+                <p class="blog-author">By <a href="">Danny Sapio"</a></p>
+              </div>
+            </article>
+            <article class="blog">
+              <div class="thumbnail">
+                <img src="images/blogs/blog-3.png" alt="" />
+              </div>
+              <div class="blog-info">
+                <h3 class="blog-title">13 of My Favorite UI/UX Goodies</h3>
+                <p class="blog-author">By <a href="">Danny Sapio"</a></p>
+              </div>
+            </article>
+            <article class="blog">
+              <div class="thumbnail">
+                <img src="images/blogs/blog-4.png" alt="" />
+              </div>
+              <div class="blog-info">
+                <h3 class="blog-title">13 of My Favorite UI/UX Goodies</h3>
+                <p class="blog-author">By <a href="">Danny Sapio"</a></p>
+              </div>
+            </article>
+          </div>
+        </div>
+      </section>
+      <!-- Latest courses -->
+      <section class="container">
+        <h2 class="section-title">Latest Courses</h2>
+        <div class="courses">
+          <div class="course">
+            <div class="course-banner">
+              <img src="images/courses/course-1.png" alt="" />
+            </div>
+            <div class="course-detail">
+              <h3 class="course-title">React - The Complete Guide 2020</h3>
+              <p class="course-author">Reed Krakoff.</p>
+              <div class="course-info">
+                <div>
+                  <i class="fa-solid fa-star filled"></i>
+                  <i class="fa-solid fa-star filled"></i>
+                  <i class="fa-solid fa-star filled"></i>
+                  <i class="fa-solid fa-star filled"></i>
+                  <i class="fa-solid fa-star empty"></i>
+                  <span>4.5</span>
+                </div>
+
+                <div class="course-duration">
+                  <i class="fa-regular fa-clock"></i>
+                  01.30hr
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="course">
+            <div class="course-banner">
+              <img src="images/courses/course-2.png" alt="" />
+            </div>
+            <div class="course-detail">
+              <h3 class="course-title">React - The Complete Guide 2020</h3>
+              <p class="course-author">Reed Krakoff.</p>
+              <div class="course-info">
+                <div>
+                  <i class="fa-solid fa-star filled"></i>
+                  <i class="fa-solid fa-star filled"></i>
+                  <i class="fa-solid fa-star filled"></i>
+                  <i class="fa-solid fa-star filled"></i>
+                  <i class="fa-solid fa-star empty"></i>
+                  <span>4.5</span>
+                </div>
+
+                <div class="course-duration">
+                  <i class="fa-regular fa-clock"></i>
+                  01.30hr
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="course">
+            <div class="course-banner">
+              <img src="images/courses/course-3.png" alt="" />
+            </div>
+            <div class="course-detail">
+              <h3 class="course-title">React - The Complete Guide 2020</h3>
+              <p class="course-author">Reed Krakoff.</p>
+              <div class="course-info">
+                <div>
+                  <i class="fa-solid fa-star filled"></i>
+                  <i class="fa-solid fa-star filled"></i>
+                  <i class="fa-solid fa-star filled"></i>
+                  <i class="fa-solid fa-star filled"></i>
+                  <i class="fa-solid fa-star empty"></i>
+                  <span>4.5</span>
+                </div>
+
+                <div class="course-duration">
+                  <i class="fa-regular fa-clock"></i>
+                  01.30hr
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
